--- a/styles.css
+++ b/styles.css
@@ -509,7 +509,6 @@ If your plugin does not need CSS, delete this file.
 
 .content-input {
     width: 100%;
-    height: 100%;
     min-height: 28px;
     resize: vertical;
     border: none;
@@ -519,6 +518,7 @@ If your plugin does not need CSS, delete this file.
     color: var(--text-normal);
     padding: 4px;
     outline: none;
+    overflow: hidden;
 }
 
 .content-input:focus {
